# pg-trickle

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .unsafe-baseline  AGENTS.md  CHANGELOG.md  CHECKLIST_0.5.0.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.demo  Dockerfile.ghcr  Dockerfile.hub  Dockerfile.relay  ESSENCE.md  INSTALL.md  META.json  README.md  ROADMAP.md  arch1b_split.py  book.toml  check_links.py  codecov.yml  deny.toml  justfile  staged_files.txt  test_output.txt  trace_rng.py
.config/: nextest.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
.semgrep/: pg_trickle.yml
benches/: diff_operators.rs  refresh_bench.rs  scheduler_bench.rs
blog/: README.md  append-only-fast-path.md  backup-and-restore.md  built-in-outbox.md  calculated-scheduling.md  circular-dependencies.md  column-level-lineage.md  compliance-audit-trails.md  cost-model-auto-mode.md  cqrs-without-second-database.md  dbt-analytics-stack.md  deploying-rag-at-scale.md  diamond-dependencies.md  differential-dataflow-explained.md  distinct-reference-counting.md  distributed-ivm-citus.md  drain-mode.md  ducklake-ivm-missing-piece.md  ducklake-modern-data-stack.md  ducklake-monitoring.md  ducklake-real-time-dashboards.md  ducklake-table-changes-dvm.md  error-budgets.md  event-sourcing-read-models.md  exists-not-exists-delta-rules.md  foreign-table-sources.md  funnel-analysis-cohort-retention.md  grouping-sets-rollup-cube.md  ha-failover-patroni.md  hnsw-recall-distribution-drift.md  hybrid-cdc-mode.md  immediate-mode-zero-lag.md  inbox-pattern-kafka.md  incremental-aggregates-no-etl.md  incremental-fulltext-search.md  incremental-ml-feature-engineering.md  incremental-pagerank-graph-analytics.md  incremental-pgvector.md  incremental-statistical-aggregates.md  incremental-vector-aggregates.md  (+40 more)
cnpg/: Dockerfile.ext  Dockerfile.ext-build  cluster-production.yaml
dbt-pgtrickle/: AGENTS.md  CHANGELOG.md  README.md  dbt_project.yml
demo/: Dockerfile.postgres  README.md  docker-compose.yml
doc/: pg_trickle.md
docker/: docker-compose.citus.yml  pg_trickle-defaults.conf
docs/: ARCHITECTURE.md  BACKUP_AND_RESTORE.md  BENCHMARK.md  CAPACITY_PLANNING.md  CITUS.md  CLI_REFERENCE.md  COMPARISONS.md  CONFIGURATION.md  COST_MODEL.md  DEMO.md  DUCKLAKE_COMMUNITY_OUTREACH.md  DVM_OPERATORS.md  DVM_REWRITE_RULES.md  ERRORS.md  ESSENCE.md  FAQ.md  GETTING_STARTED.md  GLOSSARY.md  GUC_CATALOG.md  HA_AND_REPLICATION.md  INBOX.md  LIMITATIONS.md  MENTAL_MODEL.md  MULTI_DATABASE.md  OUTBOX.md  PATTERNS.md  PERFORMANCE_CHEATSHEET.md  PERFORMANCE_COOKBOOK.md  PLAYGROUND.md  PRE_DEPLOYMENT.md  PROJECT_HISTORY.md  QUICKSTART_5MIN.md  RELAY.md  RELAY_GUIDE.md  RELEASE.md  RUNBOOK_DRAIN.md  SCALING.md  SECURITY_GUIDE.md  SECURITY_MODEL.md  SNAPSHOTS.md  (+19 more)
examples/: non-differential.sql
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cdc_fuzz.rs  cron_fuzz.rs  guc_fuzz.rs  merge_sql_fuzz.rs  parser_fuzz.rs  row_id_fuzz.rs
monitoring/: README.md  docker-compose.yml
pgtrickle-relay/: Cargo.toml  README.md
pgtrickle-relay/src/: cli.rs  config.rs  coordinator.rs  envelope.rs  error.rs  main.rs  metrics.rs  transforms.rs
pgtrickle-relay/src/sink/: inbox.rs  kafka.rs  mod.rs  nats.rs  pg_outbox.rs  rabbitmq.rs  redis.rs  sqs.rs  stdout.rs  webhook.rs
pgtrickle-relay/src/source/: kafka.rs  mod.rs  nats.rs  outbox.rs  rabbitmq.rs  redis.rs  sqs.rs  stdin.rs  webhook.rs
pgtrickle-tui/: Cargo.toml
pgtrickle-tui/src/: app.rs  cli.rs  command_tests.rs  connection.rs  error.rs  main.rs  output.rs  poller.rs  state.rs  test_db.rs  test_fixtures.rs  theme.rs
pgtrickle-tui/src/commands/: alter.rs  cdc.rs  completions.rs  config.rs  create.rs  diag.rs  drop.rs  explain.rs  export.rs  fuse.rs  graph.rs  health.rs  list.rs  mod.rs  refresh.rs  status.rs  watch.rs  watermarks.rs  workers.rs
pgtrickle-tui/src/views/: alert.rs  cdc.rs  config.rs  dashboard.rs  delta_inspector.rs  detail.rs  diagnostics.rs  fuse.rs  graph.rs  health.rs  help.rs  issues.rs  mod.rs  refresh_log.rs  watermarks.rs  workers.rs
pgtrickle-tui/src/views/snapshots/: pgtrickle__views__snapshot_tests__alert_view_empty.snap  pgtrickle__views__snapshot_tests__alert_view_with_data.snap  pgtrickle__views__snapshot_tests__cdc_view.snap  pgtrickle__views__snapshot_tests__config_view.snap  pgtrickle__views__snapshot_tests__delta_inspector_no_selection.snap  pgtrickle__views__snapshot_tests__delta_inspector_with_selection.snap  pgtrickle__views__snapshot_tests__detail_error_table.snap  pgtrickle__views__snapshot_tests__detail_no_selection.snap  pgtrickle__views__snapshot_tests__detail_with_selected_table.snap  pgtrickle__views__snapshot_tests__diagnostics_view.snap  pgtrickle__views__snapshot_tests__fuse_view.snap  pgtrickle__views__snapshot_tests__graph_view.snap  pgtrickle__views__snapshot_tests__health_view.snap  pgtrickle__views__snapshot_tests__help_overlay_dashboard.snap  pgtrickle__views__snapshot_tests__help_overlay_health.snap  pgtrickle__views__snapshot_tests__issues_view.snap  pgtrickle__views__snapshot_tests__issues_view_empty.snap  pgtrickle__views__snapshot_tests__refresh_log_view.snap  pgtrickle__views__snapshot_tests__watermarks_view.snap  pgtrickle__views__snapshot_tests__workers_view.snap
plans/: ANALYSIS_COMPOSABILITY.md  ANALYSIS_MONOREPO.md  INDEX.md  MIGRATION_PROCEDURE_TRICKLE_LABS.md  PLAN.md  PLAN_0_11_0.md  PLAN_0_12_0.md  PLAN_0_13_0.md  PLAN_0_14_0.md  PLAN_0_15_0.md  PLAN_0_16_0.md  PLAN_0_17_0.md  PLAN_0_18_0.md  PLAN_0_19_0.md  PLAN_0_20_0.md  PLAN_0_21_0.md  PLAN_0_22_0.md  PLAN_0_23_0.md  PLAN_0_26_0.md  PLAN_0_27_0.md  PLAN_0_28_0.md  PLAN_0_29_0.md  PLAN_AGENT_SKILLS.md  PLAN_DOCUMENTATION_GAPS_1.md  PLAN_DOCUMENTATION_GAPS_2.md  PLAN_DOG_FEEDING.md  PLAN_EDGE_CASES.md  PLAN_EDGE_CASES_TIVM_IMPL_ORDER.md  PLAN_ERGONOMICS.md  PLAN_FEATURE_CLEANUP.md  PLAN_OVERALL_ASSESSMENT.md  PLAN_OVERALL_ASSESSMENT_10.md  PLAN_OVERALL_ASSESSMENT_11.md  PLAN_OVERALL_ASSESSMENT_12.md  PLAN_OVERALL_ASSESSMENT_2.md  PLAN_OVERALL_ASSESSMENT_3.md  PLAN_OVERALL_ASSESSMENT_7.md  PLAN_OVERALL_ASSESSMENT_8.md  (+8 more)
(+830 files in other folders)
