[package]
name = "pg_trickle"
version = "0.2.2"
edition = "2024"
description = "Streaming Stream Tables for PostgreSQL 18 with differential view maintenance"
license = "Apache-2.0"
repository = "https://github.com/grove/pg-trickle"
homepage = "https://github.com/grove/pg-trickle"
readme = "README.md"
keywords = ["postgresql", "streaming", "materialized-view", "incremental", "pgrx"]
categories = ["database"]

# Allow pgrx internal cfg values used by pg_shmem_init! macro
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("pg13", "pg14", "pg15", "pg16", "pg17"))'] }

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_trickle"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg18"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []
light-e2e = []

[dependencies]
pgrx = "=0.17.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
thiserror = "2"
sha2 = "0.10"
croner = "3"
chrono = "0.4"

[dev-dependencies]
pgrx-tests = "=0.17.0"
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["postgres"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json"] }
serde_json = "1"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "refresh_bench"
harness = false

[[bench]]
name = "diff_operators"
harness = false

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
